# alphabet_recognizer

./: .gitignore  Cargo.toml  README.md  justfile
shared/: Cargo.toml
shared/src/: data.rs  lib.rs  model.rs
train/: Cargo.toml
train/src/: main.rs  train.rs
web/: Cargo.toml  index.html  index.js
web/src/: lib.rs  state.rs  web.rs
