[package]
name = "train"
version = "0.0.0"
edition = "2021"

[dependencies]
burn = { workspace = true, features = ["train"] }
shared = { path = "../shared", features = ["train"] }
serde = { version = "1.0.217", features = ["std", "derive"] }
log = { version = "0.4.25" }
image = "0.25.5"
fastrand = "2.3.0"
serde_json = "1.0.138"

[features]
default = ["burn/dataset", "burn/vision"]
ndarray = ["burn/ndarray"]
ndarray-blas-accelerate = ["burn/ndarray", "burn/accelerate"]
ndarray-blas-netlib = ["burn/ndarray", "burn/blas-netlib"]
ndarray-blas-openblas = ["burn/ndarray", "burn/openblas"]
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]
wgpu = ["burn/wgpu"]
